Support seekable HTTP media inputs
